--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "name": "hotline---icons",
   "displayName": "Hotline - Icons",
   "type": "module",
-  "version": "1.0.0",
-  "description": "A collection of bright lined icons for VS Code",
+  "version": "1.1.0",
+  "description": "💛🩷🩵🖤 - A collection of bright lined icons",
   "author": {
     "name": "Jake Webster",
     "email": "jakepeterwebster@gmail.com",
